# qcoro

./: CMakeLists.txt  requirements.txt
.github/workflows/: build-docker-images.yml  build-linux.yml  build-macos.yml  build-windows.yml  generate-matrix.py  update-docs.yml
cmake/: AddQCoroLibrary.cmake
docker/: Dockerfile.clang  Dockerfile.gcc
docs/coroutines/: coawait.md
docs/examples/: qnetworkreply.cpp  qprocess.cpp
docs/news/2025/: 2025-04-03-qcoro-0.12.0-announcement.md
docs/reference/core/: qiodevice.md  qprocess.md  qthread.md  qtimer.md  signals.md
docs/reference/coro/: generator.md  task.md
docs/reference/network/: qabstractsocket.md  qlocalsocket.md  qtcpserver.md
examples/: CMakeLists.txt
examples/background-task/: CMakeLists.txt  main.cpp
examples/basics/: CMakeLists.txt
examples/chained/: CMakeLists.txt
examples/dbus/: CMakeLists.txt
examples/dbus/common/: CMakeLists.txt
examples/dbus/coroutine/: CMakeLists.txt
examples/dbus/regular-blocking/: CMakeLists.txt
examples/future/: CMakeLists.txt
examples/iodevice/: CMakeLists.txt
examples/network/: CMakeLists.txt
examples/timer/: CMakeLists.txt
qcoro/: qcorogenerator.h
qcoro/core/: qcorofuture.h
tests/: CMakeLists.txt  qcoroqmltask.cpp  qcorotask.cpp  qfuture.cpp  qtimer.cpp
